[project]
name = "HTeaLeaf"
version = "0.3.0"
description = "Declarative SSR Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"HTeaLeaf.Server" = ['*.js']
