[project]
name = "HTeaLeaf"
version = "0.3.3"
description = "Declarative SSR Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"HTeaLeaf.Server" = ['*.js']
